Alternative approach to getting \char_generate:nn right

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1434,7 +1434,7 @@
           {
             #3
             \exp_after:wN \exp_end:
-            \lua_now_x:n { l3kernel.charcat(#1, #2) }
+            \use_x:n { \lua_now_x:n { l3kernel.charcat(#1, #2) } }
           }
       }
       {
