USe \exp_after:wN not \use_x:n as we need to stop expansion ...

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1433,8 +1433,8 @@
         \cs_new:Npn \@@_generate_aux:nnw #1#2#3 \exp_end:
           {
             #3
-            \exp_after:wN \exp_end:
-            \use_x:n { \lua_now_x:n { l3kernel.charcat(#1, #2) } }
+            \exp_after:wN \exp_after:wN \exp_after:wN \exp_end:
+            \lua_now_x:n { l3kernel.charcat(#1, #2) }
           }
       }
       {
