Avoid \tl_to_str:n abuse by using the kernel function

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2649,7 +2649,7 @@
 \cs_new:Npn \@@_head_auxii:n #1
   {
     \exp_after:wN \if_meaning:w \exp_after:wN \q_nil
-      \tl_to_str:n \exp_after:wN { \use_none:n #1 } \q_nil
+      \__kernel_tl_to_str:w \exp_after:wN { \use_none:n #1 } \q_nil
       \exp_after:wN \use_i:nn
     \else:
       \exp_after:wN \use_ii:nn
