--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1443,13 +1443,22 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\use_x:n}
+%    \begin{macrocode}
+%<@@=use>
+%    \end{macrocode}
+%
+% \begin{macro}[EXP]{\use_x:n, \@@_x:n}
 %   A candidate, but needed early as it links to string comparisons.
 %   Currently \LuaTeX-only.
 %    \begin{macrocode}
-\tex_let:D \use_x:n \luatex_expanded:D
+\tex_let:D \@@_x:n \luatex_expanded:D
+\cs_set:Npn \use_x:n #1 { \@@_x:n {#1} }
 %    \end{macrocode}
 % \end{macro}
+%
+%    \begin{macrocode}
+%<@@=exp>
+%    \end{macrocode}
 %
 % \begin{macro}[EXP]{\use:n, \use:nn, \use:nnn, \use:nnnn}
 %    These macros grab their arguments and returns them back to the input
