Also add int_step_variable shorthands (see #454)

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -493,7 +493,7 @@
 % \section{Integer step functions}
 %
 % \begin{function}[added = 2012-06-04, updated = 2018-04-22, rEXP]
-%   {\int_step_function:nnnN}
+%   {\int_step_function:nN, \int_step_function:nnN, \int_step_function:nnnN}
 %   \begin{syntax}
 %     \cs{int_step_function:nN} \Arg{final value} \meta{function}
 %     \cs{int_step_function:nnN} \Arg{initial value} \Arg{final value} \meta{function}
@@ -529,7 +529,7 @@
 % \end{function}
 %
 % \begin{function}[added = 2012-06-04, updated = 2018-04-22]
-%   {\int_step_inline:nnnn}
+%   {\int_step_inline:nn, \int_step_inline:nnn, \int_step_inline:nnnn}
 %   \begin{syntax}
 %     \cs{int_step_inline:nn} \Arg{final value} \Arg{code}
 %     \cs{int_step_inline:nnn} \Arg{initial value} \Arg{final value} \Arg{code}
@@ -549,11 +549,12 @@
 %   $1$. These functions are provided as simple short-cuts for code clarity.
 % \end{function}
 %
-% \begin{function}[added = 2012-06-04, updated = 2014-05-30]
-%   {\int_step_variable:nnnNn}
+% \begin{function}[added = 2012-06-04, updated = 2018-04-22]
+%   {\int_step_variable:nnn, \int_step_variable:nnnn, \int_step_variable:nnnnn}
 %   \begin{syntax}
-%     \cs{int_step_variable:nnnNn} \\
-%     ~~\Arg{initial value} \Arg{step} \Arg{final value} \meta{tl~var} \Arg{code}
+%     \cs{int_step_variable:nNn} \Arg{final value} \meta{tl~var} \Arg{code}
+%     \cs{int_step_variable:nnNn} \Arg{initial value} \Arg{final value} \meta{tl~var} \Arg{code}
+%     \cs{int_step_variable:nnnNn} \Arg{initial value} \Arg{step} \Arg{final value} \meta{tl~var} \Arg{code}
 %   \end{syntax}
 %   This function first evaluates the \meta{initial value}, \meta{step}
 %   and \meta{final value}, all of which should be integer expressions.
@@ -562,6 +563,11 @@
 %   \meta{value}), the \meta{code} is inserted into the input stream,
 %   with the \meta{tl~var} defined as the current \meta{value}.  Thus
 %   the \meta{code} should make use of the \meta{tl~var}.
+%
+%   The functions \cs{int_step_variable:nNn} and \cs{int_step_variable:nnNn}
+%   both use a fixed \meta{step} of $1$, and in the case of
+%   \cs{int_step_variable:nNn} the \meta{initial value} is also fixed as
+%   $1$. These functions are provided as simple short-cuts for code clarity.
 % \end{function}
 %
 % \section{Formatting integers}
@@ -1837,22 +1843,20 @@
           #1 { \int_eval:n { #2 + #3 } } {#3} {#4} #5
       }
   }
-\cs_new:Npn \int_step_function:nN #1#2
-  { \int_step_function:nnnN { 1 } { 1 } {#1} #2 }
-\cs_new:Npn \int_step_function:nnN #1#2#3
-  { \int_step_function:nnnN {#1} { 1 } {#2} #3 }
+\cs_new:Npn \int_step_function:nN
+  { \int_step_function:nnnN { 1 } { 1 } }
+\cs_new:Npn \int_step_function:nnN #1
+  { \int_step_function:nnnN {#1} { 1 } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\int_step_inline:nnnn}
-% \begin{macro}{\int_step_variable:nnnNn}
+% \begin{macro}{\int_step_inline:nn, \int_step_inline:nnn, \int_step_inline:nnnn}
+% \begin{macro}{\int_step_variable:nNn, \int_step_variable:nnNn, \int_step_variable:nnnNn}
 % \UnitTested
 % \begin{macro}{\@@_step:NNnnnn}
-% \begin{macro}{\int_step_inline:nN}
-% \begin{macro}{\int_step_inline:nnN}
 %   The approach here is to build a function, with a global integer
 %   required to make the nesting safe (as seen in other in line
 %   functions), and map that function using \cs{int_step_function:nnnN}.
@@ -1862,6 +1866,10 @@
 %   \cs{scan_stop:}, so that no breaking function recognizes this break
 %   point as its own.
 %    \begin{macrocode}
+\cs_new_protected:Npn \int_step_inline:nn
+  { \int_step_inline:nnnn { 1 } { 1 } }
+\cs_new_protected:Npn \int_step_inline:nnn #1
+  { \int_step_inline:nnnn {#1} { 1 } }
 \cs_new_protected:Npn \int_step_inline:nnnn
   {
     \int_gincr:N \g__kernel_prg_map_int
@@ -1869,6 +1877,10 @@
       \cs_gset_protected:Npn
       { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
   }
+\cs_new_protected:Npn \int_step_variable:nNn
+  { \int_step_variable:nnnNn { 1 } { 1 } }
+\cs_new_protected:Npn \int_step_variable:nnNn #1
+  { \int_step_variable:nnnNn {#1} { 1 } }
 \cs_new_protected:Npn \int_step_variable:nnnNn #1#2#3#4#5
   {
     \int_gincr:N \g__kernel_prg_map_int
@@ -1887,13 +1899,7 @@
     \int_step_function:nnnN {#3} {#4} {#5} #2
     \prg_break_point:Nn \scan_stop: { \int_gdecr:N \g__kernel_prg_map_int }
   }
-\cs_new_protected:Npn \int_step_inline:nn #1#2
-  { \int_step_inline:nnnn { 1 } { 1 } {#1} #2 }
-\cs_new_protected:Npn \int_step_inline:nnn #1#2#3
-  { \int_step_inline:nnnn {#1} { 1 } {#2} #3 }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
