Use new int_step variants to shorten some code
Almost all uses of int_step loops had a step of 1; adding these variants was
probably right.

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -168,8 +168,7 @@
     \tex_hyphenchar:D #1 = \int_eval:n {#2} \scan_stop:
     \int_compare:nNnT { \tex_hyphenchar:D #1 } > 0
       { \tex_fontdimen:D \tex_hyphenchar:D #1 #1 = \c_zero_dim }
-    \int_step_inline:nnnn { 1 } { 1 } { 8 }
-      { \tex_fontdimen:D ##1 #1 = \c_zero_dim }
+    \int_step_inline:nn { 8 } { \tex_fontdimen:D ##1 #1 = \c_zero_dim }
   }
 %    \end{macrocode}
 % \end{macro}
