--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -75,10 +75,10 @@
 % All the characters in the range $0$--$31$ \emph{except} tab (|^^I|), nl
 % (|^^J|), ff (|^^L|) and cr (|^^M|).
 %    \begin{macrocode}
-\int_step_inline:nnnn { 0 } { 1 } { `\^^H }
+\int_step_inline:nnn { 0 } { `\^^H }
   { \char_set_catcode_invalid:n {#1} }
 \char_set_catcode_invalid:n { `\^^K }
-\int_step_inline:nnnn { `\^^N } { 1 } { 31 }
+\int_step_inline:nnn { `\^^N } { 31 }
   { \char_set_catcode_invalid:n {#1} }
 %    \end{macrocode}
 % The same is true for the top of the $7$-bit range.
@@ -276,7 +276,7 @@
               = "[latinmodern-math.otf]/OT:mode=base;script=math;+ssty=0;"~at~7pt \scan_stop:
             \tex_font:D \exp_not:c { TU/lmm/m/n/5 }
               = "[latinmodern-math.otf]/OT:mode=base;script=math;+ssty=1;"~at~5pt \scan_stop:
-            \exp_not:N \int_step_inline:nnnn { 0 } { 1 } { 3 }
+            \exp_not:N \int_step_inline:nnn { 0 } { 3 }
               {
                 \tex_textfont:D         ##1 = \exp_not:c { TU/lmm/m/n/10 }
                 \tex_scriptfont:D       ##1 = \exp_not:c { TU/lmm/m/n/7 }
