--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -434,8 +434,8 @@
       \@@_main:NNNn #1 #2 #4 {#5}
       \seq_gset_from_inline_x:Nnn \g_@@_internal_seq
         {
-          \int_step_function:nnnN
-            { \l_@@_min_int } { 1 } { \l_@@_top_int - 1 }
+          \int_step_function:nnN
+            { \l_@@_min_int } { \l_@@_top_int - 1 }
         }
         { \tex_the:D \tex_toks:D ##1 }
     \group_end:
