Sharpen documentation of \exp_not:n and \tl_to_str:n [ci-skip]
These are the only two n-type synonyms of primitives, so the only two
n-type arguments that must be braced (the n-type argument of \cs_new:Npn
and similar functions must also be braced but only to end the p-type
argument before it).

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -619,7 +619,10 @@
 %   resulting character tokens in the input stream. A \meta{string}
 %   is a series of tokens with category code $12$ (other) with the exception
 %   of spaces, which retain category code $10$ (space).
+%   This function requires only a single expansion.
+%   Its argument \emph{must} be braced.
 %   \begin{texnote}
+%     This is the \eTeX{} primitive \tn{detokenize}.
 %     Converting a \meta{token list} to a \meta{string} yields a
 %     concatenation of the string representations of every token in the
 %     \meta{token list}.
