--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -454,7 +454,10 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \DocInput{l3luatex.dtx}
 \DocInput{l3unicode.dtx}
 \DocInput{l3candidates.dtx}
-\DocInput{l3deprecation.dtx}
 \DocInput{l3drivers.dtx}
+
+\ExplSyntaxOn
+\clist_gput_right:Nn \g_docinput_clist { l3deprecation.dtx }
+\ExplSyntaxOff
 
 \endinput
