Typos and code layout

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1465,7 +1465,7 @@
 %    \end{macrocode}
 %
 % \begin{macro}[EXP]{\use:n, \use:nn, \use:nnn, \use:nnnn}
-%    These macros grab their arguments and returns them back to the input
+%    These macros grab their arguments and return them back to the input
 %    (with outer braces removed).
 %    \begin{macrocode}
 \cs_set:Npn \use:n    #1       {#1}
