--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2525,18 +2525,12 @@
     \cs_new_protected:Npn \sys_shell_now:n #1
       {
         \lua_now_x:n
-          {
-            os.execute("
-              \lua_escape_x:n { \tl_to_str:n {#1} }
-            ")
-          }
+          { os.execute(" \lua_escape_x:n { \tl_to_str:n {#1} } ") }
       }
   }
   {
     \cs_new_protected:Npn \sys_shell_now:n #1
-      {
-        \iow_now:Nn \c_@@_shell_stream_int { #1 }
-      }
+      { \iow_now:Nn \c_@@_shell_stream_int {#1} }
   }
 \cs_generate_variant:Nn \sys_shell_now:n { x }
 %    \end{macrocode}
@@ -2550,18 +2544,12 @@
     \cs_new_protected:Npn \sys_shell_shipout:n #1
       {
         \lua_shipout_x:n
-          {
-            os.execute("
-              \lua_escape_x:n { \tl_to_str:n {#1} }
-            ")
-          }
+          { os.execute(" \lua_escape_x:n { \tl_to_str:n {#1} } ") }
       }
   }
   {
     \cs_new_protected:Npn \sys_shell_shipout:n #1
-      {
-        \iow_shipout:Nn \c_@@_shell_stream_int { #1 }
-      }
+      { \iow_shipout:Nn \c_@@_shell_stream_int {#1} }
   }
 \cs_generate_variant:Nn \sys_shell_shipout:n { x }
 %    \end{macrocode}
