--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -759,7 +759,7 @@
 %   \cs{exp_end:} gets generated.
 %   \begin{texnote}
 %     The current implementation uses \tn{romannumeral} hence ignores
-%     space tokens and explict signs |+| and |-| in the expansion of the
+%     space tokens and explicit signs |+| and |-| in the expansion of the
 %     \meta{expandable tokens}, but this should not be relied upon.
 %   \end{texnote}
 % \end{function}
