Guard against active ^^@ being defined
For example for xmltex.

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1534,10 +1534,15 @@
 %    \end{macrocode}
 %    If the above definition ever appears outside its proper context
 %    the active character |^^@| will be executed so we turn this into an
-%    error.
+%    error. The test for existence covers the (unlikely) case that some
+%    other code has already defined |^^@|: this is true for example for
+%    \texttt{xmltex.tex}.
 %    \begin{macrocode}
-  \cs_new:Npn ^^@
-    { \__kernel_msg_expandable_error:nn { kernel } { bad-exp-end-f } }
+  \if_cs_exist:N ^^@
+  \else:
+    \cs_new:Npn ^^@
+      { \__kernel_msg_expandable_error:nn { kernel } { bad-exp-end-f } }
+  \fi:
 %    \end{macrocode}
 %   The same but grabbing an argument to remove spaces and braces.
 %    \begin{macrocode}
